# dead-link-checker

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: index.py  scraper.py  utils.py
src/entities/: link.py  page.py
src/loggers/: console_logger.py  logger.py  nop_logger.py
src/reporters/: file_reporter.py  reporter.py
