[tool.poetry]
name = "dead-link-checker"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalleilv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyquery = "^1.4.3"
click = "^8.0.3"
pychalk = "^2.0.1"
httpx = "^0.22.0"
async_lru = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
